feat: max-parallel
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/.github/workflows/compatibility-e2e.yml
+++ b/.github/workflows/compatibility-e2e.yml
@@ -25,6 +25,7 @@ jobs:
     strategy:
       matrix:
         module: ["manager", "scheduler", "cdn", "dfdaemon"]
+      max-parallel: 2
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
