docs: add maxConcurrency comment
Signed-off-by: Jim Ma <majinjing3@gmail.com>

--- a/docs/en/deployment/configuration/dfget.yaml
+++ b/docs/en/deployment/configuration/dfget.yaml
@@ -202,7 +202,8 @@ proxy:
         insecure: true
         # optional certificates if the host uses self-signed certificates
         certs: []
-
+  # max tasks to download same time, 0 is no limit
+  maxConcurrency: 0
   whiteList:
     # the host of the whitelist
     - host: ""
