--- a/test/testdata/charts/config.yaml
+++ b/test/testdata/charts/config.yaml
@@ -33,6 +33,8 @@ dfdaemon:
       hostPath:
         path: /tmp/artifact
   config:
+    scheduler:
+      disableAutoBackSource: true
     proxy:
       defaultFilter: "Expires&Signature"
       security:
