--- a/docs/en/deployment/configuration/dfget.yaml
+++ b/docs/en/deployment/configuration/dfget.yaml
@@ -25,6 +25,13 @@ keepStorage: true
 # daemon will send tasks to a fixed scheduler by hashing the task url and meta data
 # caution: only tcp is supported
 scheduler:
+  manager:
+    # get scheduler list dynamically from manager
+    enable: false
+    # manager service address
+    addr: 127.0.0.1:65003
+    # scheduler list refresh interval
+    refreshInterval: 5m
   # schedule timeout
   scheduleTimeout: 30s
   # when true, only scheduler says back source, daemon can back source
@@ -49,11 +56,16 @@ host:
   # access ip for other peers
   # when local ip is different with access ip, advertiseIP should be set
   advertiseIP: 0.0.0.0
-  # geographical location and network topology
+  # geographical location, separated by "|" characters
   location: ""
+  # idc deployed by daemon
   idc: ""
+  # security domain deployed by daemon, network isolation between different security domains
   securityDomain: ""
+  # network topology, separated by "|" characters
   netTopology: ""
+  # daemon hostname
+  # hostname: ""
 
 # download service option
 download:
