docs: metrics configuration
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/docs/en/deployment/configuration/cdn.yaml
+++ b/docs/en/deployment/configuration/cdn.yaml
@@ -55,6 +55,11 @@ base:
     location:
     idc:
 
+  # enable prometheus metrics
+  # metrics:
+  #  # metrics service address
+  #  addr: ":8000"
+
 plugins:
   storagedriver:
     - name: disk
