chore: unify binary directory
Signed-off-by: Jim Ma <majinjing3@gmail.com>

--- a/deploy/kustomize/single-cluster-openkruise/bases/cdn/statefulset.yaml
+++ b/deploy/kustomize/single-cluster-openkruise/bases/cdn/statefulset.yaml
@@ -74,7 +74,7 @@ spec:
         - |
           cp /etc/dragonfly/nginx.conf /etc/nginx/nginx.conf
           nginx
-          exec /opt/dragonfly/df-cdn/cdn
+          exec /opt/dragonfly/bin/cdn
         image: dragonflyoss/cdn
         imagePullPolicy: "Always"
         ports:
