--- a/deploy/kustomize/single-cluster-native/bases/cdn/statefulset.yaml
+++ b/deploy/kustomize/single-cluster-native/bases/cdn/statefulset.yaml
@@ -72,7 +72,7 @@ spec:
         - |
           cp /etc/dragonfly/nginx.conf /etc/nginx/nginx.conf
           nginx
-          exec /opt/dragonfly/df-cdn/cdn
+          exec /opt/dragonfly/bin/cdn
         image: dragonflyoss/cdn
         imagePullPolicy: "Always"
         ports:
