feat: searcher plugin change return params (#844)
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/client/config/testdata/config/daemon.yaml
+++ b/client/config/testdata/config/daemon.yaml
@@ -6,7 +6,9 @@ keepStorage: false
 scheduler:
   manager:
     enable: false
-    addr: "127.0.0.1:65003"
+    netAddrs:
+      - type: tcp
+        addr: 127.0.0.1:65003
     refreshInterval: 5m
   netAddrs:
     - type: tcp
