docs: keep alive
Signed-off-by: Gaius <gaius.qi@gmail.com>

--- a/docs/en/deployment/configuration/dfget.yaml
+++ b/docs/en/deployment/configuration/dfget.yaml
@@ -84,7 +84,7 @@ download:
     # dial timeout
     dialTimeout: 2s
     # keep alive
-    keepAlive: true
+    keepAlive: 30s
     # same with http.Transport.MaxIdleConns
     maxIdleConns: 100
     # same with http.Transport.IdleConnTimeout
