--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -26,5 +26,6 @@ jobs:
       - name: Markdown lint
         uses: docker://avtodev/markdown-lint:v1
         with:
+          config: '.markdownlint.yml'
           args: '**/*.md'
           ignore: 'deploy/helm-charts manager/console CHANGELOG.md docs/en/api-reference docs/zh-CN/api-reference docs/en/cli-reference/dfget.1.md'
