chore: update github action config
Signed-off-by: Jim Ma <majinjing3@gmail.com>

--- a/.github/workflows/compatibility-e2e.yml
+++ b/.github/workflows/compatibility-e2e.yml
@@ -51,7 +51,7 @@ jobs:
 
       - name: Build images
         run: |
-          make docker-build
+          make docker-build docker-build-testing-tools
           docker pull dragonflyoss/${{ matrix.module }}:${{ env.DRAGONFLY_STABLE_IMAGE_TAG }}
 
       - name: Prepare kind environment
