--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,12 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run Unit tests
-        run: sudo make test-coverage
+        run: |-
+          # switch to installed go
+          sudo ln -sf `which go` `sudo which go`
+          go version
+          sudo go version
+          sudo make test-coverage
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
