feat: support disk usage gc in client
Signed-off-by: Jim Ma <majinjing3@gmail.com>

--- a/docs/en/deployment/configuration/dfget.yaml
+++ b/docs/en/deployment/configuration/dfget.yaml
@@ -173,8 +173,11 @@ storage:
   #                            when user delete or change this file, this peer data will be corrupted
   # default is io.d7y.storage.v2.advance
   strategy: io.d7y.storage.v2.advance
-  # disk quota gc threshold, when the quota of all tasks exceeds the gc threshold, oldest tasks will be reclaimed.
+  # disk quota gc threshold, when the quota of all tasks exceeds the gc threshold, the oldest tasks will be reclaimed.
   diskGCThreshold: 50Gi
+  # disk used percent gc threshold, when the disk used percent exceeds, the oldest tasks will be reclaimed.
+  # eg, diskGCThresholdPercent=80, when the disk usage is above 80%, start to gc the oldest tasks
+  diskGCThresholdPercent: 80
   # set to ture for reusing underlying storage for same task id
   multiplex: true
 
